Fixed some Javadoc warnings.
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@2372 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -174,7 +174,7 @@
 		<!-- document all the source -->
         <mkdir dir="${docs.dir}"/>
 		<javadoc
-			destdir="${docs.dir}/api" author="true" use="true" windowtitle="Glazed Lists" source="${java.target.version}">
+			destdir="${docs.dir}/api" author="true" use="true" windowtitle="Glazed Lists" source="${java.target.version}" Encoding="${java.encoding}">
 			<packageset dir="source"><exclude name="**/impl/**"/><exclude name="**/migrationkit/**"/></packageset>
 			<packageset dir="extensions/calculation/source"><exclude name="**/impl/**"/></packageset>
 			<packageset dir="extensions/swt/source"><exclude name="**/impl/**"/><exclude name="**/migrationkit/**"/></packageset>
