GLAZEDLISTS-571: first version of JavaFX issue browser.
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@2377 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -562,7 +562,7 @@
         </java>
     </target>
 
-    <target name="issuesbrowser" depends="core,swing,swt,jfreechart,jgoodiesforms,nachocalendar,treetable">
+    <target name="issuesbrowser" depends="core,swing,swt,jfreechart,jgoodiesforms,nachocalendar,treetable,javafx">
         <mkdir dir="extensions/issuesbrowser/lib"/>
         <java classname="ca.odell.glazedlists.impl.HttpClient">
             <classpath path="${classes.dir}"/>
@@ -575,7 +575,8 @@
                 <fileset dir="extensions/jfreechart/lib/" includes="*.jar"/>
                 <fileset dir="extensions/jgoodiesforms/lib/" includes="*.jar"/>
                 <fileset dir="extensions/nachocalendar/lib/" includes="*.jar"/>
-                <fileset dir="extensions/issuesbrowser/lib/" includes="*.jar"/>
+                <fileset dir="extensions/javafx/lib/" includes="*.jar"/>
+            	<fileset dir="extensions/issuesbrowser/lib/" includes="*.jar"/>
             </classpath>
         </javac>
     </target>
