Ensure tools directory is created when running unit tests before doing anything else. Initial Travis descriptor file.

--- a/build.xml
+++ b/build.xml
@@ -710,6 +710,8 @@
        This task depends on JUnit, available free at http://www.junit.org
      - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
     <target name="downloadJUnit">
+        <mkdir dir="tools"/>
+
         <java classname="ca.odell.glazedlists.impl.HttpClient">
             <classpath path="${classes.dir}"/>
             <arg value="${download.tools.url}/junit/4.11/junit.jar"/>
