--- a/build.xml
+++ b/build.xml
@@ -14,14 +14,14 @@
     <property name="java.target.version.fileFriendlyName" value="java15"/>
 
 	<!-- Version number for the next planned release -->
-    <property name="next.release.version" value="1.9.1"/>
+    <property name="next.release.version" value="1.9.2"/>
     
 	<!-- Maven coordinates -->
 	<!-- version number, use suffix '-SNAPSHOT' for development build -->
 	<!--
     <property name="version" value="${next.release.version}-SNAPSHOT"/>
     -->
-	<property name="version" value="1.9.1-SNAPSHOT"/>
+	<property name="version" value="1.9.1"/>
     <property name="artifactId" value="glazedlists_${java.target.version.fileFriendlyName}" />
 	<property name="groupId" value="net.java.dev.glazedlists" />
 
