Setting maxmemory for junit. Workaround for Travis issue https://github.com/travis-ci/travis-ci/issues/3396

--- a/build.xml
+++ b/build.xml
@@ -727,7 +727,7 @@
     <target name="test" depends="compiletests"
             description="Compile unit tests and run them using JUnit.">
            <!-- Execute JUnit tests -->
-            <junit printsummary="true" showoutput="false" fork="true"
+            <junit printsummary="true" showoutput="false" fork="true" maxmemory="512m"
                     errorProperty="test.failed" failureProperty="test.failed">
                     <assertions>
                     	<enable/>
