--- a/build.xml
+++ b/build.xml
@@ -495,18 +495,18 @@
         <mkdir dir="extensions/hibernate/lib"/>
         <java classname="ca.odell.glazedlists.impl.HttpClient">
             <classpath path="${classes.dir}"/>
-            <arg value="${download.lib.url}/hibernate/4.1.12.Final/hibernate.jar"/>
+            <arg value="${download.lib.url}/hibernate/5.0.11.Final/hibernate.jar"/>
             <arg value="extensions/hibernate/lib/hibernate.jar"/>
         </java>		
         <java classname="ca.odell.glazedlists.impl.HttpClient">
             <classpath path="${classes.dir}"/>
-            <arg value="${download.lib.url}/hibernate/4.1.12.Final/hibernate-libs.jar"/>
+            <arg value="${download.lib.url}/hibernate/5.0.11.Final/hibernate-libs.jar"/>
             <arg value="extensions/hibernate/lib/hibernate-libs.jar"/>
         </java>				
         <java classname="ca.odell.glazedlists.impl.HttpClient">
             <classpath path="${classes.dir}"/>
-            <arg value="${download.lib.url}/hsqldb/2.2.6/hsqldb-jdk5.jar"/>
-            <arg value="extensions/hibernate/lib/hsqldb-jdk5.jar"/>
+            <arg value="${download.lib.url}/hsqldb/2.3.4/hsqldb.jar"/>
+            <arg value="extensions/hibernate/lib/hsqldb.jar"/>
         </java>				
         <javac destdir="${classes.dir}" srcdir="extensions/hibernate/source" debug="on" source="${java.target.version}" target="${java.target.version}" encoding="${java.encoding}" deprecation="off">
             <classpath>
