added gradle configuration

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.gradle/
+**/build
 target/
 .project
 .classpath
@@ -6,5 +8,6 @@ target/
 *.iml
 *.ipr
 *.iws
-extensions/*/lib/
 tools/
+*.swp
+*.DS_Store
