--- a/build.xml
+++ b/build.xml
@@ -15,11 +15,11 @@
     <property name="java.target.version.fileFriendlyName" value="java16"/>
 
 	<!-- Version number for the next planned release -->
-    <property name="next.release.version" value="1.10"/>
+    <property name="next.release.version" value="1.10.0"/>
     
 	<!-- Maven coordinates -->
 	<!-- version number, use suffix '-SNAPSHOT' for development build -->
-    <property name="version" value="${next.release.version}-SNAPSHOT"/>
+    <property name="version" value="${next.release.version}"/>
     <property name="artifactId" value="glazedlists_${java.target.version.fileFriendlyName}" />
 	<property name="groupId" value="net.java.dev.glazedlists" />
 
@@ -701,6 +701,7 @@
 			<exclude name="tools/**"/>
 			<exclude name="extensions/**/lib/**"/>
 			<exclude name="www/**"/>
+			<exclude name=".git/**"/>
 			<exclude name="*.iml"/> <!-- Intellij IDEA Module File -->
 			<exclude name="*.ipr"/> <!-- Intellij IDEA Project File -->
 			<exclude name="*.iws"/> <!-- Intellij IDEA Workspace File -->
