--- a/build.xml
+++ b/build.xml
@@ -15,7 +15,7 @@
     <property name="java.target.version.fileFriendlyName" value="java16"/>
 
 	<!-- Version number for the next planned release -->
-    <property name="next.release.version" value="1.10.0"/>
+    <property name="next.release.version" value="1.10.1-SNAPSHOT"/>
     
 	<!-- Maven coordinates -->
 	<!-- version number, use suffix '-SNAPSHOT' for development build -->
