moved io into own extension

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ include 'core'
 include 'extensions:calculation'
 include 'extensions:hibernate'
 include 'extensions:icu4j'
+include 'extensions:io'
 include 'extensions:issuesbrowser'
 include 'extensions:japex'
 include 'extensions:javafx'
