Set source file encoding to UTF-8

--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,10 @@ allprojects {
  */
 subprojects {
     apply plugin: 'java'
-
+	tasks.withType(JavaCompile) {
+	  options.encoding = "UTF-8"
+	}
+	
     repositories {
         jcenter()
 
