Set encoding for javadoc to UTF-8.

--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,9 @@ subprojects {
 	tasks.withType(JavaCompile) {
 	  options.encoding = "UTF-8"
 	}
+	tasks.withType(Javadoc) {
+		options.encoding = "UTF-8"
+	}
 	
     repositories {
         jcenter()
