Move publishing artifacts from maven.java.net to Sonatype OSSRH Service.
SNAPSHOT builds already work:
https://oss.sonatype.org/content/repositories/snapshots/com/glazedlists/glazedlists/1.11-SNAPSHOT/

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 nextReleaseVersion = 1.11
 isSnapshot = true
 javaTargetVersion = 1.7
-mavenSnapshotsRepositoryId = jvnet-nexus-snapshots
-mavenSnapshotsRepositoryUrl = https://maven.java.net/content/repositories/snapshots/
-mavenStagingRepositoryId = jvnet-nexus-staging
-mavenStagingRepositoryUrl = https://maven.java.net/service/local/staging/deploy/maven2/
+mavenSnapshotsRepositoryId = oss-nexus-snapshots
+mavenSnapshotsRepositoryUrl = https://oss.sonatype.org/content/repositories/snapshots
+mavenStagingRepositoryId = oss-nexus-staging
+mavenStagingRepositoryUrl = https://oss.sonatype.org/service/local/staging/deploy/maven2
