--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ plugins {
 /**
  * group and version (artifact is set from rootProject.name in settings.gradle
  */
-group "net.java.dev.glazedlists"
+group "com.glazedlists"
 version "$nextReleaseVersion${isSnapshot == "true" ? "-SNAPSHOT" : ""}"
 
 /**
@@ -193,6 +193,10 @@ signing {
 publishing {
     repositories {
         maven {
+            credentials {
+                username "$ossrhUsername"
+                password "$ossrhPassword"
+            }
             url isSnapshot ? mavenSnapshotsRepositoryUrl : mavenStagingRepositoryUrl
         }
     }
