Values for sonatypeUsername and sonatypePassword needed.

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,5 @@ mavenSnapshotsRepositoryId = oss-nexus-snapshots
 mavenSnapshotsRepositoryUrl = https://oss.sonatype.org/content/repositories/snapshots
 mavenStagingRepositoryId = oss-nexus-staging
 mavenStagingRepositoryUrl = https://oss.sonatype.org/service/local/staging/deploy/maven2
+sonatypeUsername = dummy
+sonatypePassword = dummyPassword
