Also add timezone and update id for Rob

--- a/build.gradle
+++ b/build.gradle
@@ -261,13 +261,13 @@ uploadArchives {
                         timezone "EST"
                     }
                     developer {
-                        id "reden"
+                        id "robeden"
                         name "Rob Eden"
                         email "robeden1@gmail.com"
                         roles {
                             role "Java developer"
                         }
-                        timezone ""
+                        timezone "CST"
                     }
                     developer {
                         id "brands"
