--- a/build.gradle
+++ b/build.gradle
@@ -183,6 +183,8 @@ artifacts {
 }
 
 signing {
+    required { gradle.taskGraph.hasTask("uploadArchives") }
+    
     sign configurations.archives
 }
 
